--- a/app/src/main/res/layout/find_stop_activity.xml
+++ b/app/src/main/res/layout/find_stop_activity.xml
@@ -3,12 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.martinhudec.kwigBA.stopDetail.StopDetailsActivity">
+    tools:context="com.example.martinhudec.kwigBA.findStop.FindStopActivity">
 
     <include android:id="@+id/app_bar"
         layout="@layout/app_bar"/>
-    <TextView
-        android:id="@+id/txtQuery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/find_stop_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
