--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#FF5722</color>
-    <color name="primaryColorDark">#689F38</color>
-    <color name="primaryColorAccent">#FF9800</color>
+    <color name="primaryColor">#F44336</color>
+    <color name="primaryColorDark">#D32F2F</color>
+    <color name="primaryColorAccent">#FFC107</color>
     <color name="colorHighlight">#B6B6B6</color>
 </resources>
