fixing and repainting and translating

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:id="@+id/materialTabHost"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:elevation="4dp"
             app:textColor="#FFFFFF"
             app:primaryColor="@color/primaryColor"
             app:accentColor="@color/primaryColorAccent" />
