--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/primaryColor"
+    android:elevation="4dp"
     app:theme="@style/CustomToolBarTheme"
     app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar">
 </android.support.v7.widget.Toolbar>
