--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -2,22 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="48dp"
-   android:background="@color/primaryColorAccent">
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+   android:background="@drawable/custom_bg"
+
+    android:clickable="true">
     <ImageView
         android:id="@+id/listIcon"
-        android:layout_width="48dp"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:src="@drawable/android4"
-        android:layout_marginLeft="16dp"
         android:elevation="15dp"
-        android:layout_marginRight="16dp"
         android:layout_centerVertical="true"/>
-
     <TextView
         android:id="@+id/listText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DUMMY "
+        android:textSize="14sp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="72dp"
         />
