--- a/app/src/main/res/layout/near_stops_custom_row.xml
+++ b/app/src/main/res/layout/near_stops_custom_row.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="50dp"
     android:elevation="10dp"
+    android:background="@drawable/custom_bg"
+    android:clickable="true"
     android:translationZ="10dp"
     android:id="@+id/near_stops_custom_row">
 
@@ -23,7 +25,7 @@
         android:id="@+id/near_stops_custom_row_stop_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:elevation="15dp"
         android:gravity="center"
