--- a/app/src/main/res/layout/stop_detail_activity.xml
+++ b/app/src/main/res/layout/stop_detail_activity.xml
@@ -9,16 +9,33 @@
         android:id="@+id/app_bar"
         layout="@layout/app_bar" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshStopDetail"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_below="@+id/containerDrawerImage"
+        <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/progress_view"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:cpv_indeterminate="true"
+            app:cpv_thickness="16px"
+
+            android:layout_gravity="center"
+            android:layout_centerInParent="true"
+            app:cpv_animAutostart="true" />
+d
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshStopDetail"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="#727272" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_below="@+id/containerDrawerImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="#B6B6B6" />
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </RelativeLayout>
 </LinearLayout>
