--- a/app/src/main/res/layout/suggested_stop_custom_row.xml
+++ b/app/src/main/res/layout/suggested_stop_custom_row.xml
@@ -3,6 +3,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="40dp"
+    android:background="@drawable/custom_bg"
+    android:clickable="true"
     android:elevation="15dp"
     android:id="@+id/stop_custom_row">
 
