--- a/app/src/main/res/layout/vehicle_marker_info_window.xml
+++ b/app/src/main/res/layout/vehicle_marker_info_window.xml
@@ -26,7 +26,7 @@
         android:background="#1E88E5"
         android:layout_gravity="center"
         android:clickable="true"
-        android:text="Show detail"
+        android:text="@string/vehicle_marker_show_detail_button"
         />
 
 </LinearLayout>
